[build-system]
requires = [
    "setuptools>=61.0",
    "networkx>=3.1",    
]
build-backend = "setuptools.build_meta"

[project]
name = "phylox"
version = "0.0.1"
authors = [
  { name="Remie Janssen", email="remiejanssen92@gmail.com" },
]
description = "A package with tools for constructing, manipulating, and analyzing phylogenetic networks."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/RemieJanssen/PhyloX"
"Bug Tracker" = "https://github.com/RemieJanssen/PhyloX/issues"
